# solana-events-parser

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: event_parser.rs  event_reader_service.rs  instruction_parser.rs  lib.rs  log_parser.rs  main.rs  storage.rs  transaction_parser.rs  truncated_parse_test.rs
