[package]
name = "solana-events-parser"
version = "0.3.4"
publish = true
edition = "2021"

[features]
default = ["solana", "anchor", "storage", "rocksdb", "event-reader"]
unknown_log = []
solana = ["dep:solana-client", "dep:solana-sdk", "dep:solana-transaction-status", "dep:de-solana-client"]
anchor = ["solana", "dep:anchor-lang", "dep:base64"]
storage = ["solana"]
rocksdb = ["dep:rocksdb", "dep:bincode"]
event-reader = ["storage", "dep:futures", "dep:thiserror", "dep:non-empty-vec"]

[dependencies]
bs58 = "0.4.0"
lazy_static = "1.4.0"
regex = "1.5.4"
simple_logger = "4.0.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
anyhow = "1.0.69"
async-trait = "0.1.64" 
tokio = "1.14.1"
tracing = "0.1.37"

anchor-lang = { git = "https://github.com/debridge-finance/anchor.git", branch = "update-solana-version", optional = true}

futures = { version = "0.3", optional = true }
solana-client = { version = "1.14.7", optional = true }
solana-sdk = { version = "1.14.7", optional = true }
solana-transaction-status = { version = "1.14.7", optional = true }
base64 = { version = "0.13.0", optional = true }
rocksdb = { version = "0.21.0", optional = true }
bincode = { version = "1.3.3", optional = true }
thiserror = { version = "1.0.30", optional = true }
non-empty-vec = { version = "0.2.3", optional = true }
result-inspect = "0.2.0"

[dependencies.de-solana-client]
version = "0.3.2"
git = "ssh://git@github.com/debridge-finance/de-solana-client.git"
tag = "v0.3.2"
optional = true
