[package]
name = "solana-events-parser"
version = "0.5.1"
authors = [
    "cyphersnake <cyphersnake@pm.me>",
    "shinkarenko  <shinbogdan@gmail.com>",
    "twoflower <ptekhazhevgm@gmail.com>"
]
repository = "https://github.com/cyphersnake/solana-events-parser"
homepage = "https://github.com/cyphersnake/solana-events-parser"
description = "Provides various utilities for working with Solana blockchain transactions and events"
publish = true
keywords = ["solana", "anchor", "blockchain", "utilities"]
edition = "2021"
license = "MIT"

[features]
default = ["solana", "anchor", "storage", "rocksdb", "event-reader"]
unknown_log = []
solana = ["dep:solana-client", "dep:solana-sdk", "dep:solana-transaction-status", "dep:de-solana-client"]
anchor = ["solana", "dep:anchor-lang", "dep:base64"]
storage = ["solana"]
rocksdb = ["dep:rocksdb", "dep:bincode"]
event-reader = ["storage", "dep:futures", "dep:thiserror", "dep:non-empty-vec", "dep:derive_builder"]

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68" 
base64 = { version = "0.13.0", optional = true }
bincode = { version = "1.3.3", optional = true }
bs58 = "0.5.0"
derive_builder = { version = "0.12.0", optional = true }
futures = { version = "0.3", optional = true }
lazy_static = "1.4.0"
non-empty-vec = { version = "0.2.3", optional = true }
regex = "1.8.2"
result-inspect = "0.3.0"
rocksdb = { version = "0.21.0", optional = true }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
simple_logger = "4.1.0"
thiserror = { version = "1.0.40", optional = true }
tracing = "0.1.37"
borsh = "0.10.3"

tokio = { version = "1", features = ["full"] }

solana-client = { version = "1.16.0", optional = true }
solana-sdk = { version = "1.16.0", optional = true }
solana-transaction-status = { version = "1.16.0", optional = true }
itertools = "0.11.0"

[dependencies.de-solana-client]
version = "0.3.5"
optional = true

[dependencies.anchor-lang]
version = "0.28.0"
optional = true
